# ISInterface_univer

./: CMakeLists.txt  ISInterfaces_univer.code-workspace  include.h
lab1/: CMakeLists.txt  main.c
lab1/src/: main.c
lab2/: CMakeLists.txt
lab2/src/: client.c  server.c
lab3/: CMakeLists.txt  debug.sh  root.sh
lab3/include/: ipv6.h  javaMain.h  tcp.h
lab3/src/: cmake_var.h.in  javaImp.c  javaMain.java  runner.c
